[metadata]
author = Christian Theune
author_email = ct@flyingcircus.io
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Mirroring tool that implements the client (mirror) side of PEP 381
long_description = file:README.md
long_description_content_type = text/markdown
license = Academic Free License, version 3
license_file = LICENSE
name = bandersnatch
project_urls =
    Source Code = https://github.com/pypa/bandersnatch
    Change Log = https://github.com/pypa/bandersnatch/blob/master/CHANGES.md
url = https://github.com/pypa/bandersnatch/
version = 4.3.0

[options]
install_requires =
    aiohttp
    aiohttp-socks
    aiohttp-xmlrpc
    filelock
    importlib_resources; python_version < '3.7'
    packaging
    setuptools>40.0.0
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

[options.package_data]
bandersnatch = *.conf

[options.entry_points]
bandersnatch_storage_plugins.v1.backend =
    swift_plugin = bandersnatch_storage_plugins.swift:SwiftStorage
    filesystem_plugin = bandersnatch_storage_plugins.filesystem:FilesystemStorage

# This entrypoint group must match the value of bandersnatch.filter.PROJECT_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.project =
    blocklist_project = bandersnatch_filter_plugins.blocklist_name:BlockListProject
    allowlist_project = bandersnatch_filter_plugins.allowlist_name:AllowListProject
    regex_project = bandersnatch_filter_plugins.regex_name:RegexProjectFilter

# This entrypoint group must match the value of bandersnatch.filter.METADATA_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.metadata =
    regex_project_metadata = bandersnatch_filter_plugins.metadata_filter:RegexProjectMetadataFilter

# This entrypoint group must match the value of bandersnatch.filter.RELEASE_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.release =
    blocklist_release = bandersnatch_filter_plugins.blocklist_name:BlockListRelease
    allowlist_release = bandersnatch_filter_plugins.allowlist_name:AllowListRelease
    prerelease_release = bandersnatch_filter_plugins.prerelease_name:PreReleaseFilter
    regex_release = bandersnatch_filter_plugins.regex_name:RegexReleaseFilter
    latest_release = bandersnatch_filter_plugins.latest_name:LatestReleaseFilter
    allowlist_release = bandersnatch_filter_plugins.allowlist_name:AllowListRelease
    allowlist_requirements = bandersnatch_filter_plugins.allowlist_name:AllowListRequirements

# This entrypoint group must match the value of bandersnatch.filter.RELEASE_FILE_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.release_file =
    regex_release_file_metadata = bandersnatch_filter_plugins.metadata_filter:RegexReleaseFileMetadataFilter
    version_range_release_file_metadata = bandersnatch_filter_plugins.metadata_filter:VersionRangeReleaseFileMetadataFilter
    exclude_platform = bandersnatch_filter_plugins.filename_name:ExcludePlatformFilter

console_scripts =
    bandersnatch = bandersnatch.main:main

[options.extras_require]
safety_db =
    bandersnatch_safety_db

test =
    coverage
    freezegun
    flake8
    flake8-bugbear
    pytest
    pytest-timeout
    pytest-cache

doc_build =
    docutils
    sphinx
    sphinx_bootstrap_theme
    guzzle_sphinx_theme
    sphinx_rtd_theme
    recommonmark
    # git+https://github.com/pypa/pypa-docs-theme.git#egg=pypa-docs-theme
    # git+https://github.com/python/python-docs-theme.git#egg=python-docs-theme

swift =
    keystoneauth1
    openstackclient
    python-swiftclient

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
multi_line_output = 3
known_third_party = _pytest,aiohttp,aiohttp_socks,aiohttp_xmlrpc,asynctest,filelock,freezegun,keystoneauth1,mock_config,packaging,pkg_resources,pytest,setuptools,swiftclient
known_first_party = bandersnatch,bandersnatch_filter_plugins,bandersnatch_storage_plugins
force_grid_wrap = 0
use_parentheses=True
include_trailing_comma = True
