[metadata]
author = Christian Theune
author_email = ct@flyingcircus.io
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Mirroring tool that implements the client (mirror) side of PEP 381
long_description = file:README.md
long_description_content_type = text/markdown
license = Academic Free License, version 3
license_file = LICENSE
name = bandersnatch
project_urls =
    Source Code = https://github.com/pypa/bandersnatch
    Change Log = https://github.com/pypa/bandersnatch/blob/master/CHANGES.md
url = https://github.com/pypa/bandersnatch/
version = 6.5.0

[options]
install_requires =
    aiohttp
    aiohttp-socks
    aiohttp-xmlrpc
    filelock
    humanfriendly
    packaging
    setuptools
package_dir =
    =src
packages = find:
python_requires = >=3.10

[options.packages.find]
where=src

[options.package_data]
bandersnatch = *.conf

[options.entry_points]
bandersnatch_storage_plugins.v1.backend =
    swift_plugin = bandersnatch_storage_plugins.swift:SwiftStorage
    filesystem_plugin = bandersnatch_storage_plugins.filesystem:FilesystemStorage
    s3_plugin = bandersnatch_storage_plugins.s3:S3Storage

# This entrypoint group must match the value of bandersnatch.filter.PROJECT_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.project =
    blocklist_project = bandersnatch_filter_plugins.blocklist_name:BlockListProject
    allowlist_project = bandersnatch_filter_plugins.allowlist_name:AllowListProject
    regex_project = bandersnatch_filter_plugins.regex_name:RegexProjectFilter
    project_requirements = bandersnatch_filter_plugins.allowlist_name:AllowListRequirements

# This entrypoint group must match the value of bandersnatch.filter.METADATA_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.metadata =
    regex_project_metadata = bandersnatch_filter_plugins.metadata_filter:RegexProjectMetadataFilter
    size_project_metadata = bandersnatch_filter_plugins.metadata_filter:SizeProjectMetadataFilter

# This entrypoint group must match the value of bandersnatch.filter.RELEASE_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.release =
    blocklist_release = bandersnatch_filter_plugins.blocklist_name:BlockListRelease
    allowlist_release = bandersnatch_filter_plugins.allowlist_name:AllowListRelease
    prerelease_release = bandersnatch_filter_plugins.prerelease_name:PreReleaseFilter
    regex_release = bandersnatch_filter_plugins.regex_name:RegexReleaseFilter
    latest_release = bandersnatch_filter_plugins.latest_name:LatestReleaseFilter
    project_requirements_pinned = bandersnatch_filter_plugins.allowlist_name:AllowListRequirementsPinned

# This entrypoint group must match the value of bandersnatch.filter.RELEASE_FILE_PLUGIN_RESOURCE
bandersnatch_filter_plugins.v2.release_file =
    regex_release_file_metadata = bandersnatch_filter_plugins.metadata_filter:RegexReleaseFileMetadataFilter
    version_range_release_file_metadata = bandersnatch_filter_plugins.metadata_filter:VersionRangeReleaseFileMetadataFilter
    exclude_platform = bandersnatch_filter_plugins.filename_name:ExcludePlatformFilter

console_scripts =
    bandersnatch = bandersnatch.main:main

[options.extras_require]
safety_db =
    bandersnatch_safety_db

swift =
    keystoneauth1
    openstackclient
    python-swiftclient

uvloop =
    uvloop

s3 =
    s3path>=0.4.0

[isort]
atomic = true
profile = black
known_third_party = _pytest,aiohttp,aiohttp_socks,aiohttp_xmlrpc,filelock,freezegun,keystoneauth1,mock_config,packaging,pkg_resources,pytest,setuptools,swiftclient
known_first_party = bandersnatch,bandersnatch_filter_plugins,bandersnatch_storage_plugins
